Add home address.

--- a/blog/201710251850.md
+++ b/blog/201710251850.md
@@ -1,6 +1,8 @@
 # 在Ubuntu下安装nodejs
 
+> Home Address -> <https://cugtyt.github.io/blog/index>  
 
+---
 
 ***不要使用 ```sudo apt install nodejs npm```***
 
