--- a/blog/201710251851.md
+++ b/blog/201710251851.md
@@ -1,5 +1,8 @@
 # 安装hexo出现npm run build:highlight及权限错误
 
+> Home Address -> <https://cugtyt.github.io/blog/index>  
+
+---
 
 用户目录下会有nom-debug.log文件
 最后的错误是：
