Update blog no loops in cs231n.

--- a/blog/201710281645.md
+++ b/blog/201710281645.md
@@ -6,7 +6,8 @@
 
 > 数据维数  
 > 训练集： X_train -> (5000, 3072)  
-> 测试集： X_test -> (500, 3072)
+> 测试集： X_test -> (500, 3072)  
+> 距离矩阵：dist -> (500, 5000)
 
 - 首先，目标是计算测试集中每一个图片与训练集中的所有图片的距离，那么就会有一个距离矩阵(500, 5000)，行表示测试集索引，列表示训练集索引，也就是(i, j)表示第i个测试图片到第j个训练图片的距离。
 
