Update contact me.

--- a/blog/201710281230.md
+++ b/blog/201710281230.md
@@ -1,6 +1,9 @@
 # numpy.tile 示例
 
-> Home Address -> <https://cugtyt.github.io/blog/index>  
+> ## Contact me:
+> Blog -> <https://cugtyt.github.io/blog/index>  
+> Email -> <cugtyt@qq.com>, <cugtyt@gmail.com>  
+> GitHub -> [Cugtyt@GitHub](https://github.com/Cugtyt)
 
 ---
 
