--- a/blog/201710281314.md
+++ b/blog/201710281314.md
@@ -1,6 +1,9 @@
 # numpy.swapaxes 交换矩阵的轴，旋转维度
 
-> Home Address -> <https://cugtyt.github.io/blog/index>  
+> ## Contact me:
+> Blog -> <https://cugtyt.github.io/blog/index>  
+> Email -> <cugtyt@qq.com>, <cugtyt@gmail.com>  
+> GitHub -> [Cugtyt@GitHub](https://github.com/Cugtyt)
 
 ---
 
