--- a/blog/201710251851.md
+++ b/blog/201710251851.md
@@ -1,6 +1,9 @@
 # 安装hexo出现npm run build:highlight及权限错误
 
-> Home Address -> <https://cugtyt.github.io/blog/index>  
+> ## Contact me:
+> Blog -> <https://cugtyt.github.io/blog/index>  
+> Email -> <cugtyt@qq.com>, <cugtyt@gmail.com>  
+> GitHub -> [Cugtyt@GitHub](https://github.com/Cugtyt)
 
 ---
 
