Update blog numpy pad.

--- a/blog/201711022006.md
+++ b/blog/201711022006.md
@@ -18,16 +18,20 @@
 >>> np.pad(a, ((0, 0), (0, 0)), 'constant', constant_values=0)
 array([[1, 2, 3],
        [4, 5, 6]])
+# 此处表示都没有填充
+
 >>> np.pad(a, ((0, 0), (0, 1)), 'constant', constant_values=0)
 array([[1, 2, 3, 0],
        [4, 5, 6, 0]])
 # 可以看到，在第一维也就是列，(0, 0) 操作表示不填充
 # 第二维也就是行，(0, 1) 表示前面填充0个，后面填充1个
+
 >>> np.pad(a, ((0, 1), (0, 0)), 'constant', constant_values=0)
 array([[1, 2, 3],
        [4, 5, 6],
        [0, 0, 0]])
 # 列后面填充，前面没有填充，行都没有填充
+
 >>> np.pad(a, ((1, 1), (1, 2)), 'constant', constant_values=0)
 array([[0, 0, 0, 0, 0, 0],
        [0, 1, 2, 3, 0, 0],
