--- a/blog/201711030917.md
+++ b/blog/201711030917.md
@@ -18,9 +18,11 @@ $ n stable
 ```  
 
 我遇到了问题:  
-> sudo n stable  
-> [sudo] password for username:  
-> sudo: n: command not found  
+``` bash
+$ sudo n stable  
+[sudo] password for username:  
+sudo: n: command not found
+```  
 
 解决方案：  
 ``` bash
