--- a/blog/201711031134.md
+++ b/blog/201711031134.md
@@ -26,4 +26,5 @@ $ sudo apt update
 $ sudo apt install fish  
 ```
 
-注意： 如果没有第一句加入repository，可能导致版本不是最新，而且update也无法更新到最新版本。
+注意：  
+如果没有第一句加入repository，可能导致版本不是最新，而且update也无法更新到最新版本。
