Uodate aria2 blog.

--- a/blog/201711031511.md
+++ b/blog/201711031511.md
@@ -104,6 +104,8 @@ aria2 是一个下载工具，功能强大，具体介绍参看[官网](https://
 
 8. 可以在页面中的点击按钮操作下载任务。
 
+9. 要退出时双击 Kill.vbs  
+
 
 更好的体验可以配合网盘助手和迅雷助手使用，方便无限速下载百度网盘资源和迅雷资源。
 
