Update blog fish.

--- a/blog/201711031134.md
+++ b/blog/201711031134.md
@@ -8,7 +8,7 @@
 
 ---
 
-fish 是 Linux/Unix/Mac OS 的一个命令行 shell，有一些很好用的功能。  
+[fish shell](http://www.fishshell.com/) 是 Linux/Unix/Mac OS 的一个命令行 shell，有一些很好用的功能。  
 * 自动推荐
 * VGA 颜色
 * 完美的脚本支持
