--- a/blog/ml-in-action/201711082112.md
+++ b/blog/ml-in-action/201711082112.md
@@ -131,3 +131,95 @@ def chooseBestFeatureToSplit(dataSet):
             best_feature = i
     return best_feature
 ```
+
+
+## 4. majorityCnt函数，用于统计出现最多的类标签
+
+**原代码：**
+
+``` python
+def majorityCnt(classList):
+    classCount = {}
+    for vote in classList:                                        #统计classList中每个元素出现的次数
+        if vote not in classCount.keys():classCount[vote] = 0   
+        classCount[vote] += 1
+    sortedClassCount = sorted(classCount.items(), key = operator.itemgetter(1), reverse = True)        #根据字典的值降序排序
+    return sortedClassCount[0][0]                                #返回classList中出现次数最多的元素
+```
+
+问题：  
+
+实现繁杂，可以直接使用Counter简化。
+
+**参考修改：**
+
+``` python
+def majorityCnt(classList):
+    major_label = Counter(classList).most_common(1)[0]
+    return major_label
+```
+
+## 5. 对类别的判断应该使用 is
+
+**原代码：**
+
+``` python
+type(secondDict[key]).__name__ == 'dict'
+```
+
+问题：  
+
+实现繁杂，使用is可读性更好。
+
+**参考修改：**
+
+``` python
+type(secondDict[key]) is dict
+```
+
+## 6. 从文件读取数据使用pandas的函数更有效
+
+**原代码：**
+
+``` python
+if __name__ == '__main__':
+    with open('lenses.txt', 'r') as fr:                                        #加载文件
+        lenses = [inst.strip().split('\t') for inst in fr.readlines()]        #处理文件
+    lenses_target = []                                                        #提取每组数据的类别，保存在列表里
+    for each in lenses:
+        lenses_target.append(each[-1])
+
+    lensesLabels = ['age', 'prescript', 'astigmatic', 'tearRate']            #特征标签       
+    lenses_list = []                                                        #保存lenses数据的临时列表
+    lenses_dict = {}                                                        #保存lenses数据的字典，用于生成pandas
+    for each_label in lensesLabels:                                            #提取信息，生成字典
+        for each in lenses:
+            lenses_list.append(each[lensesLabels.index(each_label)])
+        lenses_dict[each_label] = lenses_list
+        lenses_list = []
+    # print(lenses_dict)                                                        #打印字典信息
+    lenses_pd = pd.DataFrame(lenses_dict)                                    #生成pandas.DataFrame
+    print(lenses_pd)                                                        #打印pandas.DataFrame
+    le = LabelEncoder()                                                        #创建LabelEncoder()对象，用于序列化            
+    for col in lenses_pd.columns:                                            #为每一列序列化
+        lenses_pd[col] = le.fit_transform(lenses_pd[col])
+    print(lenses_pd)
+```
+
+问题：  
+
+实现繁杂，使用pandas的内置函数可以更方便处理。
+
+**参考修改：**
+
+``` python
+if __name__ == '__main__':
+    lenses = pd.DataFrame(pd.read_table('lenses.txt'))
+    lenses.columns = ['age', 'prescript', 'astigmatic', 'tearRate', 'target']
+    lenses = lenses.drop(['target'], axis=1)
+    print(lenses_pd) 
+    le = LabelEncoder()
+    for col in lenses.columns:
+        lenses[col] = le.fit_transform(lenses[col])
+    print(lenses)
+```
