Update Navie Bayes.

--- a/blog/ml-in-action/201711101017.md
+++ b/blog/ml-in-action/201711101017.md
@@ -64,12 +64,17 @@ def setOfWords2Vec(vocabList, inputSet):
     return returnVec    
 ```
 
-## 3. 条件返回的简化
+## 3. classifyNB判断分类函数
 
 **原代码：**
 
 ``` python
-if p1 > p0:
+def classifyNB(vec2Classify, p0Vec, p1Vec, pClass1):
+    p1 = reduce(lambda x,y:x*y, vec2Classify * p1Vec) * pClass1             #对应元素相乘
+    p0 = reduce(lambda x,y:x*y, vec2Classify * p0Vec) * (1.0 - pClass1)
+    print('p0:',p0)
+    print('p1:',p1)
+    if p1 > p0:
         return 1
     else: 
         return 0
@@ -77,12 +82,17 @@ if p1 > p0:
 
 问题：  
 
-直接返回更好
+直接返回更好，使用内置mul而不要自己写
 
 **参考修改：**
 
 ``` python
-return p1 > p0
+def classifyNB(vec2Classify, p0Vec, p1Vec, pClass1):
+    p1 = reduce(mul, vec2Classify * p1Vec) * pClass1             #对应元素相乘
+    p0 = reduce(mul, vec2Classify * p0Vec) * (1.0 - pClass1)
+    print('p0:',p0)
+    print('p1:',p1)
+    return p1 > p0
 ```
 
 ## 4. 简单for使用列表推导
@@ -105,3 +115,29 @@ for postinDoc in listOPosts:
 trainMat = [setOfWords2Vec(myVocabList, postinDoc) for postinDoc in listOPosts]
 ```
 
+## 5. 使用defaultdict简化字典创建
+
+**原代码：**
+
+``` python
+all_words_dict = {}                                            #统计训练集词频
+for word_list in train_data_list:
+    for word in word_list:
+        if word in all_words_dict.keys():
+            all_words_dict[word] += 1
+        else:
+            all_words_dict[word] = 1
+```
+
+问题：  
+
+对于dict初始值赋值可以使用defaultdict简洁代码
+
+**参考修改：**
+
+``` python
+all_words_dict = defaultdict(lambda: 0)                                            #统计训练集词频
+for word_list in train_data_list:
+    for word in word_list:
+        all_words_dict[word] += 1
+```
