Correct mistake in decision tree.

--- a/blog/ml-in-action/201711082112.md
+++ b/blog/ml-in-action/201711082112.md
@@ -217,7 +217,7 @@ if __name__ == '__main__':
     lenses = pd.DataFrame(pd.read_table('lenses.txt'))
     lenses.columns = ['age', 'prescript', 'astigmatic', 'tearRate', 'target']
     lenses = lenses.drop(['target'], axis=1)
-    print(lenses_pd) 
+    print(lenses) 
     le = LabelEncoder()
     for col in lenses.columns:
         lenses[col] = le.fit_transform(lenses[col])
