--- a/blog/ml-in-action/201711101017.md
+++ b/blog/ml-in-action/201711101017.md
@@ -136,7 +136,7 @@ for word_list in train_data_list:
 **参考修改：**
 
 ``` python
-all_words_dict = defaultdict(lambda: 0)                                            #统计训练集词频
+all_words_dict = defaultdict(int)                                            #统计训练集词频
 for word_list in train_data_list:
     for word in word_list:
         all_words_dict[word] += 1
