Update blog logistic regression.

--- a/blog/ml-in-action/201711101733.md
+++ b/blog/ml-in-action/201711101733.md
@@ -44,7 +44,7 @@ def stocGradAscent1(dataMatrix, classLabels, numIter=150):
 ``` python
 def stocGradAscent1(dataMatrix, classLabels, numIter=150):
     m, n = np.shape(dataMatrix)
-    weights = np.random.rand(n)                                                
+    weights = np.random.randn(n)                                                
     for j in range(numIter * m):                                           
         alpha = 1 / (1.0 + j) + 0.01       #降低alpha的大小，每次减小1/(j+i)。
         randIndex = random.randint(0, m - 1)                #随机选取样本
