Update blog code format.

--- a/blog/ml-in-action/201711101733.md
+++ b/blog/ml-in-action/201711101733.md
@@ -48,7 +48,7 @@ def stocGradAscent1(dataMatrix, classLabels, numIter=150):
     for j in range(numIter * m):                                           
         alpha = 1 / (1.0 + j) + 0.01       #降低alpha的大小，每次减小1/(j+i)。
         randIndex = random.randint(0, m - 1)                #随机选取样本
-        h = sigmoid(sum(dataMatrix[randIndex]*weights))          #选择随机选取的一个样本，计算h
+        h = sigmoid(sum(dataMatrix[randIndex] * weights))          #选择随机选取的一个样本，计算h
         error = classLabels[randIndex] - h                      #计算误差
         weights = weights + alpha * error * dataMatrix[randIndex]       #更新回归系数
     return weights
@@ -71,5 +71,5 @@ for i in range(len(currLine)-1):
 **参考修改：**
 
 ``` python
-lineArr = [float(currLine[i]) for i in range(len(currLine)-1)]
+lineArr = [float(currLine[i]) for i in range(len(currLine) - 1)]
 ```
