Add blogs of cross-entropy

--- a/blog/ml-data/201802091801.md
+++ b/blog/ml-data/201802091801.md
@@ -39,3 +39,7 @@
 这种情况下，两个曲线不是特别相近。但是，实验表明多训练几个周期（没有展示出来）准确率基本就一样了。在这些实验的基础上，看来除了加快速度没有其他方面的改善。但是后续我们会看到![](http://latex.codecogs.com/gif.latex?%5Cinline%201/%5Csqrt%7Bn_%7B%5Crm%20in%7D%7D)的初始化方式会在长时间训练的神经网络上表现得更好。因此不仅是速度的提升，在最终性能上也会提升。
 
 ![](http://latex.codecogs.com/gif.latex?%5Cinline%201/%5Csqrt%7Bn_%7B%5Crm%20in%7D%7D)的初始化方式帮助神经网络学习得更好。提出的方法有很多，一些事建立在这个基本构想上面的。我不会展开，因为对于我们的目的来说已经够了。
+
+---
+
+其实这种初始化方式就是Xavier初始化，虽然没有明确提出，如果乘以sqrt(2)就是He初始化了。
