--- a/blog/ml-data/201802091801.md
+++ b/blog/ml-data/201802091801.md
@@ -12,11 +12,11 @@
 
 ![](resources/weight-initialization1.png)
 
-为了简化，我们假设训练的输入x，x的一半输入神经元设为1，另一部分为0。下面的论证是普遍适用的，但是你可从这个特殊示例中明白大意。让我们假设输入到第一隐层的weights和![](http://latex.codecogs.com/gif.latex?%5Cinline%20z%20%3D%20%5Csum_j%20w_j%20x_j&plus;b)。和中的500项消散了，因为对应的输入![](http://latex.codecogs.com/gif.latex?%5Cinline%20x_j)是0。因此Z相当于是对总共的501项标准化的高斯随机数求和，包括500项weights和1项bias。z本身的分布也是均值为1，标准差为![](http://latex.codecogs.com/gif.latex?%5Cinline%20%5Csqrt%7B501%7D%20%5Capprox%2022.4)的高斯分布。也就是说z是非常宽的高斯分布，没有一点峰：
+为了简化，我们假设训练的输入x，x的一半输入神经元设为1，另一部分为0。下面的论证是普遍适用的，但是你可从这个特殊示例中明白大意。让我们假设输入到第一隐层的weights和![](http://latex.codecogs.com/gif.latex?%5Cinline%20z%20%3D%20%5Csum_j%20w_j%20x_j&plus;b)。和中的500项消散了，因为对应的输入![](http://latex.codecogs.com/gif.latex?%5Cinline%20x_j)是0。因此z相当于是对总共的501项标准化的高斯随机数求和，包括500项weights和1项bias。z本身的分布也是均值为1，标准差为![](http://latex.codecogs.com/gif.latex?%5Cinline%20%5Csqrt%7B501%7D%20%5Capprox%2022.4)的高斯分布。也就是说z是非常宽的高斯分布，没有一点峰：
 
 ![](resources/weight-initialization2.png)
 
-我们可以从图中看出来，`|z|`会非常大，无论z>>1还是z<<1。如果是这样的话，输出隐层神经元输出σ(z)会非常接近于1或0。这意味着隐层神经元会饱和。这种情况发生时，weights会改变非常小，在隐层的激活部分更是十分小。反过来，隐层这种非常小的改变基本上不会改变网络的其他部分了，并且损失函数的改变也十分微小。结果就是，当我们使用梯度下降算法时这些weights会学习非常慢。不幸的是，对于饱和的隐层神经元，我们改变损失函数并没有帮助。
+我们可以从图中看出来，`|z|`会非常大，无论z>>1还是z<<-1。如果是这样的话，输出隐层神经元输出σ(z)会非常接近于1或0。这意味着隐层神经元会饱和。这种情况发生时，weights会改变非常小，在隐层的激活部分更是十分小。反过来，隐层这种非常小的改变基本上不会改变网络的其他部分了，并且损失函数的改变也十分微小。结果就是，当我们使用梯度下降算法时这些weights会学习非常慢。不幸的是，对于饱和的隐层神经元，我们改变损失函数并没有帮助。
 
 我已经讨论了第一隐层的输入weights。当然，后面的隐层也会是类似的：如果后面的隐层适用标准化高斯初始化，那么激活部分通常会非常接近0或1，学习依旧十分慢。
 
