Add blog vanishing gradient

--- a/blog/ml-data/201802101439.md
+++ b/blog/ml-data/201802101439.md
@@ -6,7 +6,7 @@
 
 ---
 
-前面（请看本系列前面的文章）我们基本上时用交叉熵解决了学习缓慢的问题，但是我想明确的描述另一个解决该问题的方法，也就是所谓了softmax。
+前面（请看本系列前面的文章）我们基本上时用交叉熵解决了学习缓慢的问题，但是我想明确的描述另一个解决该问题的方法，也就是所谓的softmax。
 
 softmax的思路是为输出层定义一个新类型。开始时就像sigmoid层一样，把加权后的输入加起来![](http://latex.codecogs.com/gif.latex?%5Cinline%20z%5EL_j%20%3D%20%5Csum_%7Bk%7D%20w%5EL_%7Bjk%7D%20a%5E%7BL-1%7D_k%20&plus;%20b%5EL_j)，但是后面我们不使用sigmoid函数获得输出，而是使用softmax函数，在这个函数中第j个输出的神经元的激活![](http://latex.codecogs.com/gif.latex?%5Cinline%20a%5EL_j)是：
 
