--- a/blog/ml-data/201802092159.md
+++ b/blog/ml-data/201802092159.md
@@ -22,7 +22,7 @@
 
 成功了！这次神经元学习如我们期望学习得很快。如果你更近距离观察，你会发现损失曲线比二次损失的曲线更陡峭一些。这是交叉熵带给我们的，避开了我们本希望神经元学习更快却卡住的地方。
 
-我还没说学习率的事，前面二次损失函数，我们使用0.15，我们应该在此处使用同样的学习率吗？事实上，不可能说“同样”的学习率了，这就像苹果和橘子不同。两个损失函数我通过实验寻找了可以看清发生了什么的学习率，如果你还是好奇，我还是告诉你这里我使用了0.005的学习率。
+我还没说学习率的事，前面二次损失函数，我们使用0.15，我们应该在此处使用同样的学习率吗？事实上，不可能说“同样”的学习率了，这就像苹果和橘子一样不同。两个损失函数我通过实验寻找了可以看清发生了什么的学习率，如果你还是好奇，我还是告诉你这里我使用了0.005的学习率。
 
 你也许会说学习率不同导致上面的实验没有意义了。当我们开始的学习率不固定时，谁还关心神经元学习多快呢？但是这样的说法遗漏了一点，就是这个图不是关于学习的绝对速度，而是关于速度如何变化的。更具体的讲，在实际输出和正确输出接近时，使用二次损失函数毫无疑问慢于后面的情况。当错的严重时，交叉熵也更快，这并不取决于学习速度。
 
@@ -36,7 +36,7 @@
 
 但是，当在最后一层有很多sigmoid神经元时，激活向量![](http://latex.codecogs.com/gif.latex?%5Cinline%20a%5EL_j)通常不是一个概率分布。因此![](http://latex.codecogs.com/gif.latex?%5Cinline%20%5Csum_j%20p_j%20%5Cln%20q_j)就不是很合适了，因为我们处理的不再是概率分布。但是，你可以把上面公式看作是每个神经元交叉熵的合集，每个神经元和它的激活看作是两元素的概率分布。在这种情况下，就是一个交叉熵对概率分布的泛化了。
 
-什么时候使用交叉熵而不是用二次损失函数呢？事实上，在输出是sigmoid神经元情况下，交叉熵几乎总是更好的选择。考虑当我们设定神经网络时，我们通常使用随机化的方式初始化weights和biases。可能出现的情况是初始的结果对于训练输入来说错的离谱，比如输出应该是0却饱和在1的附近，或者反过来。如果我们使用二次损失会降低学习速度，它将永远不会停下来，即使也在从其他输入中学习，但是总离期望太远。
+什么时候使用交叉熵而不是用二次损失函数呢？事实上，在输出是sigmoid神经元情况下，交叉熵几乎总是更好的选择。考虑当我们设定神经网络时，我们通常使用随机化的方式初始化weights和biases。可能出现的情况是初始的结果对于训练输入来说错的离谱，比如输出应该是0却饱和在1的附近，或者反过来。如果我们使用二次损失去降低学习速度，它可能永远不会停下来，即使也在从其他输入中学习，但是总离期望太远。
 
 **一些问题的解释：**
 
