--- a/blog/ml-data/201802101619.md
+++ b/blog/ml-data/201802101619.md
@@ -32,17 +32,17 @@
 
 这些定义下，我们发现![](http://latex.codecogs.com/gif.latex?%5Cinline%20%5C%7C%20%5Cdelta%5E1%20%5C%7C%20%3D%200.07%5Cldots),![](http://latex.codecogs.com/gif.latex?%5Cinline%20%5C%7C%20%5Cdelta%5E2%20%5C%7C%20%3D%200.31%5Cldots)，所以这验证了：第二隐层比第一隐层学习快得多。
 
-如果我们再加隐层呢？如果有三个隐层（5层：784，30，30，30，10），学习速度为0.012，0.060，0.283，再一次，前面隐层的学习慢于后面的隐层，如果再加一层，那就是0.003，0.017，0.070，0.285，所以说前面隐层学习慢于后面隐层的模式时站得住脚的。
+如果我们再加隐层呢？如果有三个隐层（5层：784，30，30，30，10），学习速度为0.012，0.060，0.283，再一次，前面隐层的学习慢于后面的隐层，如果再加一层，那就是0.003，0.017，0.070，0.285，所以说前面隐层学习慢于后面隐层的模式是站得住脚的。
 
 我们已经看了训练开始时学习速度，那训练网络时变化的速度呢？让我们再看两个隐层的网络，学习变化的速度是这样的：
 
 ![](resources/vanishing-gradient2.png)
 
-我是用来1000个训练图片，批量梯度下降500周期得到这个结果。（略去不重要内容）
+我是用1000个训练图片，批量梯度下降500周期得到这个结果。（略去不重要内容）
 
 你可以看到两层开始于不同的速度，在反弹前下降非常快。但是整体来看，第一隐层比第二隐层慢得多。
 
-更复杂点的网络呢？下面是个相似的使用，使用了三个隐层（784，30，30，30，10）：
+更复杂点的网络呢？下面是个相似的情况，使用了三个隐层（784，30，30，30，10）：
 
 ![](resources/vanishing-gradient3.png)
 
@@ -56,6 +56,6 @@
 
 为什么梯度消失问题会出现？我们可以避免它吗？在训练深度神经网络时我们怎么解决它？事实上，我们等会儿会说到这是无法避免的，可用的方法也并不吸引人：有时候前面层的梯度会非常大！这称作**梯度爆炸问题**，并不比梯度消失问题好到哪去。一般来说，深度神经网络的梯度时不稳定的，在前面的层总是倾向于很大或很小。这也是深度神经网络基于梯度算法的根本性问题。
 
-一个对梯度损失的反应是这的确是个问题吗？从神经网络跳出来，现象我们试着用数值方法最小化单变量函数，梯度很小不是个好消息吗？不是意味着我们已经接近了极值点吗？相似的，深度网络前面层梯度小意味着我们不需要对weights和biases做太多调整了吗？
+一个对梯度损失的反应是，这对我们来说的确是个问题吗？从神经网络跳出来，想象我们试着用数值方法最小化单变量函数，梯度很小不是个好消息吗？不是意味着我们已经接近了极值点吗？相似的，深度网络前面层梯度小意味着我们不需要对weights和biases做太多调整了吗？
 
-当然并不是这样，回想我们使用随机方法初始化weights和biases，极不可能神经网络已经到达了我们希望的情况。具体而言，考虑网络（五层：784，30，30，30，10）第一层的权重，随机初始化意味着第一层丢弃了大部分输入图像的信息，后面层再怎么训练，他们也很难判别输入图像，因为他们没有足够的信息。故第一层不可能学到太多东西，如果你要训练深度网络，你应该去解决它。
+当然并不是这样，回想我们使用随机方法初始化weights和biases，极不可能神经网络已经到达了我们希望的情况。具体而言，考虑网络（五层：784，30，30，30，10）第一层的权重，随机初始化意味着第一层丢弃了大部分输入图像的信息，后面层再怎么训练，他们也很难判别输入图像，因为他们没有足够的信息。故第一层不可能学到太多东西，如果你要训练深度网络，你应该试着去解决它。
