--- a/blog/ml-data/201802101819.md
+++ b/blog/ml-data/201802101819.md
@@ -6,13 +6,13 @@
 
 ---
 
-为了理解为什么梯度消失问题会出现，我们先考虑最简单的深度神经网络：每层只有一个神经元。这是一个三层网络：
+为了理解为什么梯度消失问题会出现，我们先考虑最简单的深度神经网络：每层只有一个神经元。这是一个三隐层网络：
 
 ![](resources/vanishing-gradient5.png)
 
 ![](http://latex.codecogs.com/gif.latex?%5Cinline%20w_1%2C%20w_2%2C%20%5Cldots)表示weights，![](http://latex.codecogs.com/gif.latex?%5Cinline%20b_1%2C%20b_2%2C%20%5Cldots)表示biases，C是损失函数。第j个神经元的输出![](http://latex.codecogs.com/gif.latex?%5Cinline%20a_j)是![](http://latex.codecogs.com/gif.latex?%5Cinline%20%5Csigma%28z_j%29),![](http://latex.codecogs.com/gif.latex?%5Cinline%20z_j%20%3D%20w_%7Bj%7D%20a_%7Bj-1%7D&plus;b_j)是加权输入。损失函数C是网络的输出![](http://latex.codecogs.com/gif.latex?%5Cinline%20a_4)的函数：如果实际输出接近期望输出，损失函数很小，如果相差很远，损失函数很大。
 
-继续说第一隐层的梯度![](http://latex.codecogs.com/gif.latex?%5Cinline%20%5Cpartial%20C%20/%20%5Cpartial%20b_1),通过这个表达式我们会理解为什么梯度消失的问题会出现。
+继续说第一隐层的梯度![](http://latex.codecogs.com/gif.latex?%5Cinline%20%5Cpartial%20C%20/%20%5Cpartial%20b_1)，通过这个表达式我们会理解为什么梯度消失的问题会出现。
 
 先看![](http://latex.codecogs.com/gif.latex?%5Cinline%20%5Cpartial%20C%20/%20%5Cpartial%20b_1)的表达式，看起来有点可怕，但这的确是个简单的结构：
 
@@ -44,11 +44,11 @@
 
 ![](http://latex.codecogs.com/gif.latex?%5Cfrac%7B%5Cpartial%20C%7D%7B%5Cpartial%20b_1%7D%20%3D%20%5Csigma%27%28z_1%29%20w_2%20%5Csigma%27%28z_2%29%20%5Cldots%20%5Csigma%27%28z_4%29%20%5Cfrac%7B%5Cpartial%20C%7D%7B%5Cpartial%20a_4%7D)
 
-**为什么梯度消失问题出现？**让我们写出完整的表达式：
+**为什么梯度消失问题出现**？让我们写出完整的表达式：
 
 ![](http://latex.codecogs.com/gif.latex?%5Cfrac%7B%5Cpartial%20C%7D%7B%5Cpartial%20b_1%7D%20%3D%20%5Csigma%27%28z_1%29%20%5C%2C%20w_2%20%5Csigma%27%28z_2%29%20%5C%2C%20w_3%20%5Csigma%27%28z_3%29%20%5C%2C%20w_4%20%5Csigma%27%28z_4%29%20%5C%2C%20%5Cfrac%7B%5Cpartial%20C%7D%7B%5Cpartial%20a_4%7D)
 
-出了最后一项，表达式是多个形如![](http://latex.codecogs.com/gif.latex?%5Cinline%20w_j%20%5Csigma%27%28z_j%29)的积，我们看下![](http://latex.codecogs.com/gif.latex?%5Cinline%20%5Csigma%27)的图像：
+除了最后一项，表达式是多个形如![](http://latex.codecogs.com/gif.latex?%5Cinline%20w_j%20%5Csigma%27%28z_j%29)的积，我们看下![](http://latex.codecogs.com/gif.latex?%5Cinline%20%5Csigma%27)的图像：
 
 ![](resources/vanishing-gradient7.png)
 
@@ -61,7 +61,7 @@
 这两个表达式有很多共同的部分，但是上面的表达式多两个![](http://latex.codecogs.com/gif.latex?%5Cinline%20w_j%20%5Csigma%27%28z_j%29)项，因此![](http://latex.codecogs.com/gif.latex?%5Cinline%20%5Cpartial%20C%20/%20%5Cpartial%20b_1)通常是![](http://latex.codecogs.com/gif.latex?%5Cinline%20%5Cpartial%20C%20/%20%5Cpartial%20b_3)的1/16，也就是梯度消失的源头。
 
 
-当然这是一个非正式的论点，并非严格证明梯度消失问题将会发生。有几个可能的例外，我们可能会怀疑weights可以在训练期间增长。如果发生了，那么![](http://latex.codecogs.com/gif.latex?%5Cinline%20w_j%20%5Csigma%27%28z_j%29)不再满足![](http://latex.codecogs.com/gif.latex?%5Cinline%20%7Cw_j%20%5Csigma%27%28z_j%29%7C%20%3C%201/4)，如果这些项足够大（大于1）那么就会出现梯度爆炸的问题。
+当然这是一个非正式的论点，并非严格证明梯度消失问题将会发生。有几个可能的例外，我们可能会怀疑weights可以在训练期间增长。发生时![](http://latex.codecogs.com/gif.latex?%5Cinline%20w_j%20%5Csigma%27%28z_j%29)不再满足![](http://latex.codecogs.com/gif.latex?%5Cinline%20%7Cw_j%20%5Csigma%27%28z_j%29%7C%20%3C%201/4)，如果这些项足够大（大于1）那么就会出现梯度爆炸的问题。
 
 **梯度爆炸问题**：让我们看一个梯度爆炸出现的例子，这个例子是人为的：我将会调整参数让梯度爆炸出现。即便是人为的，它也可以说明梯度爆炸的确会出现，而不是只有理论可能。
 
