Add blog of duplicate number and link list cycle

--- a/blog/ml-data/201802092106.md
+++ b/blog/ml-data/201802092106.md
@@ -12,7 +12,7 @@
 
 ---
 
-我们可以用不同于二次损失函数的损失函数，也就是交叉熵。我们假设使用多个输入变量![](http://latex.codecogs.com/gif.latex?%5Cinline%20x_1%2C%20x_2%2C%20%5Cldots),相关的weights为![](http://latex.codecogs.com/gif.latex?%5Cinline%20w_1%2C%20w_2%2C%20%5Cldots),bias![](http://latex.codecogs.com/gif.latex?%5Cinline%20b):
+我们可以用不同于二次损失函数的损失函数，也就是交叉熵。我们假设使用多个输入变量![](http://latex.codecogs.com/gif.latex?%5Cinline%20x_1%2C%20x_2%2C%20%5Cldots),相对应的weights为![](http://latex.codecogs.com/gif.latex?%5Cinline%20w_1%2C%20w_2%2C%20%5Cldots),bias![](http://latex.codecogs.com/gif.latex?%5Cinline%20b):
 
 ![](resources/cross-entropy5.png)
 
