--- a/blog/ml-data/201802101819.md
+++ b/blog/ml-data/201802101819.md
@@ -54,7 +54,7 @@
 
 导数最大值为![](http://latex.codecogs.com/gif.latex?%5Cinline%20%5Csigma%27%280%29%20%3D%201/4)。现在如果我们使用均值为0，方差为1的高斯分布初始化weights，weights通常满足![](http://latex.codecogs.com/gif.latex?%5Cinline%20%7Cw_j%7C%20%3C%201)，放在一起，![](http://latex.codecogs.com/gif.latex?%5Cinline%20w_j%20%5Csigma%27%28z_j%29)项通常满足![](http://latex.codecogs.com/gif.latex?%5Cinline%20%7Cw_j%20%5Csigma%27%28z_j%29%7C%20%3C%201/4)，把这些项乘起来，结果就会指数级的减小：项越多，积越小。这就是梯度消失的一个可能解释了。
 
-为了跟明显些，让我们比较![](http://latex.codecogs.com/gif.latex?%5Cinline%20%5Cpartial%20C%20/%20%5Cpartial%20b_1)和![](http://latex.codecogs.com/gif.latex?%5Cinline%20%5Cpartial%20C%20/%20%5Cpartial%20b_3)：
+为了更明显些，让我们比较![](http://latex.codecogs.com/gif.latex?%5Cinline%20%5Cpartial%20C%20/%20%5Cpartial%20b_1)和![](http://latex.codecogs.com/gif.latex?%5Cinline%20%5Cpartial%20C%20/%20%5Cpartial%20b_3)：
 
 ![](resources/vanishing-gradient8.png)
 
@@ -65,7 +65,7 @@
 
 **梯度爆炸问题**：让我们看一个梯度爆炸出现的例子，这个例子是人为的：我将会调整参数让梯度爆炸出现。即便是人为的，它也可以说明梯度爆炸的确会出现，而不是只有理论可能。
 
-两步出现梯度爆炸，第一，选择很大的weights，比如![](http://latex.codecogs.com/gif.latex?%5Cinline%20w_1%20%3D%20w_2%20%3D%20w_3%20%3D%20w_4%20%3D%20100)，第二选择biases让![](http://latex.codecogs.com/gif.latex?%5Cinline%20%5Csigma%27%28z_j%29)项不要太小。很简单就做到了：我们只需要选择biases爆炸加权输入![](http://latex.codecogs.com/gif.latex?%5Cinline%20z_j%20%3D%200)（因此![](http://latex.codecogs.com/gif.latex?%5Cinline%20%5Csigma%27%28z_j%29%20%3D%201/4)），比如我们希望![](http://latex.codecogs.com/gif.latex?%5Cinline%20z_1%20%3D%20w_1%20a_0%20&plus;%20b_1%20%3D%200)，可以设置![](http://latex.codecogs.com/gif.latex?%5Cinline%20b_1%20%3D%20-100%20*%20a_0)，同样设定其他的biases，做完后，可以看到![](http://latex.codecogs.com/gif.latex?%5Cinline%20w_j%20%5Csigma%27%28z_j%29)等于![](http://latex.codecogs.com/gif.latex?%5Cinline%20100%20*%20%5Cfrac%7B1%7D%7B4%7D%20%3D%2025)，我们这样就得到了梯度爆炸。
+两步出现梯度爆炸，第一，选择很大的weights，比如![](http://latex.codecogs.com/gif.latex?%5Cinline%20w_1%20%3D%20w_2%20%3D%20w_3%20%3D%20w_4%20%3D%20100)，第二选择biases让![](http://latex.codecogs.com/gif.latex?%5Cinline%20%5Csigma%27%28z_j%29)项不要太小。很简单就做到了：我们只需要选择biases保证加权输入![](http://latex.codecogs.com/gif.latex?%5Cinline%20z_j%20%3D%200)（因此![](http://latex.codecogs.com/gif.latex?%5Cinline%20%5Csigma%27%28z_j%29%20%3D%201/4)），比如我们希望![](http://latex.codecogs.com/gif.latex?%5Cinline%20z_1%20%3D%20w_1%20a_0%20&plus;%20b_1%20%3D%200)，可以设置![](http://latex.codecogs.com/gif.latex?%5Cinline%20b_1%20%3D%20-100%20*%20a_0)，同样设定其他的biases，做完后，可以看到![](http://latex.codecogs.com/gif.latex?%5Cinline%20w_j%20%5Csigma%27%28z_j%29)等于![](http://latex.codecogs.com/gif.latex?%5Cinline%20100%20*%20%5Cfrac%7B1%7D%7B4%7D%20%3D%2025)，我们这样就得到了梯度爆炸。
 
 **梯度不稳定问题**：这里的根本问题不是梯度消失和梯度爆炸。因为前面层是后面层各项的乘积，当层数很多时，就会有内在的不稳定情况。所有层次都能以接近相同的速度学习的唯一方法是乘积项接近平衡。因为没有这种平衡发生的机制或内在原因，发生这种情况的可能性就是随机的。简而言之，这里真正的问题是神经网络存在一个不稳定的梯度问题。如果我们使用标准的基于梯度的学习方法，网络中的不同层次将倾向于以非常不同的速度学习。
 
