Add blog c++ smart ptr

--- a/blog/2018/02132021.md
+++ b/blog/2018/02132021.md
@@ -1,4 +1,4 @@
-# 从C++的RAII理解智能指针的思路
+# 从C++的RAII理解智能指针的思路（一）
 
 ---
 > ## Contact me:
@@ -58,7 +58,7 @@ Output:
     ~Unique
 ```
 
-这样一个最为粗糙和简陋的管理方法就出现了，在函数结束的时候内存也释放了。很好，但是只能适用简单情况，很多问题不能处理，比如，我们不能随意把ptr暴露出来。如果外面获取了ptr，把内存释放掉了，那么等我们释放的时候就是第二次释放了，会出问题的。同样也不能实现内存共享，对象复制也受到影响等。
+这样一个最为粗糙和简陋的管理方法就出现了，在函数结束的时候内存也释放了，当然我们拿int数组作为例子。很好，但是只能适用简单情况，很多问题不能处理，比如，我们不能随意把ptr暴露出来。如果外面获取了ptr，把内存释放掉了，那么等我们释放的时候就是第二次释放了，会出问题的。同样也不能实现内存共享，对象复制也受到影响等。
 
 ``` c++
 Unique u1{10};
@@ -113,7 +113,7 @@ int main() {
 }
 ```
 
-虽然两次析构函数都会调用，但是内存正确释放一次，我们实现了unique_ptr的基本思路。注意这是模型，仅供理解。
+虽然两次析构函数都会调用，但是内存正确释放一次，我们实现了unique_ptr的基本思路。注意这是模型，仅供理解，和c++内部实现并不一样。
 
 那么shared_ptr，weak_ptr呢，后面我们继续讨论。
 
