--- a/blog/algo/201803271441.md
+++ b/blog/algo/201803271441.md
@@ -8,7 +8,9 @@
 
 ---
 
-假如你遇到粗糙集中求初等集的问题，具体问题见[此处](待补充)，代码实现难点可以简单描述如下，有属性集：
+如果遇到循环层数是变量的情况如何解决？
+
+问题引入，有属性集：
 
 属性 | 属性类别 | 数据标号
 :-: | :-: | :-
