--- a/blog/algo/201804291948.md
+++ b/blog/algo/201804291948.md
@@ -2,8 +2,10 @@
 
 ---
 > ## Contact me
-> Blog -> <https://cugtyt.github.io/blog/index>\
-> Email -> <cugtyt@qq.com>, <cugtyt@gmail.com>\
+> Blog -> <https://cugtyt.github.io/blog/index>
+>
+> Email -> <cugtyt@qq.com>, <cugtyt@gmail.com>
+>
 > GitHub -> [Cugtyt@GitHub](https://github.com/Cugtyt)
 
 ---
