--- a/blog/algo/201804291948.md
+++ b/blog/algo/201804291948.md
@@ -54,7 +54,7 @@
 辅助函数jump接受两个参数，一个是石头，一个是上一次跳的步数。在jump里首先检查边界情况，如果步长为0，直接False，如果石头数为1，返回True，这是处理已经跳到岸的情况。在jump里面首先判断当前能跳的步数，也就是[step - 1, step, step + 1]，然后对面前的石头依次尝试，
 如果在当前可跳的步数里，就跳过去，进行递归下一次跳，如果这次跳的结果成功，说明已经可以到岸上了，就直接返回True，如果失败了，就退回来继续下一次尝试，如果尝试都失败了，就是最后返回False即可。
 
-``` python 3
+``` python
 class Solution:
     def canCross(self, stones):
         if len(stones) == 2:
@@ -79,7 +79,7 @@ def jump(stones, step):
 
 修改后为：
 
-``` python 3
+``` python
 class Solution:
     def canCross(self, stones):
         if len(stones) == 2:
@@ -104,7 +104,7 @@ def jump(stones, step, before):
 
 这次成功通过了所有测试用例，看下别人的思路，写博客时使用Python3的最快运行代码是：
 
-``` python 3
+``` python
 def dfs(mapp, jump, current, maximum):
     if maximum == current:
         return True
