--- a/blog/algo/201804291948.md
+++ b/blog/algo/201804291948.md
@@ -49,6 +49,10 @@
 
 按照青蛙的做法，每次在能跳的步数内跳到能跳的石头上，然后接着跳，发现跳不过去，就退回来，这就可以借助堆栈完成，退回来后尝试不同的步数跳，继续重复，如果发现退回起点还是无法跳过，就说明真的跳不过去了。
 
+也就是说跳过去后的情况就是跳之前的子问题，二者的解决思路是一样的。如下图，跳过去后面临的问题只是规模x缩小了，问题性质还是一样的。
+
+![forg-jump](resources/forg-jump.png)
+
 为了实现它，我的思路是首先定义一个辅助函数，用于完成跳跃部分，在canCross里面首先检查边界情况，如果只有两个石头，就只能是1，否则就跳不过去。
 
 辅助函数jump接受两个参数，一个是石头，一个是上一次跳的步数。在jump里首先检查边界情况，如果步长为0，直接False，如果石头数为1，返回True，这是处理已经跳到岸的情况。在jump里面首先判断当前能跳的步数，也就是[step - 1, step, step + 1]，然后对面前的石头依次尝试，
@@ -60,6 +64,7 @@ class Solution:
         if len(stones) == 2:
             return False if stones[1] - stones[0] != 1 else True
         return jump(stones, 1)
+
 def jump(stones, step):
     if not step:
         return False
@@ -87,6 +92,7 @@ class Solution:
         if stones[-1] - stones[0] > 2 * (stones[-2] - stones[0]):
             return False
         return jump(stones, 1, True)
+
 def jump(stones, step, before):
     if not step:
         return False
@@ -121,6 +127,7 @@ def dfs(mapp, jump, current, maximum):
         if dfs(mapp, jump-1, k1, maximum):
             return True
     return False
+
 class Solution:
     def canCross(self, stones):
         for i in range(1, len(stones)):
@@ -129,4 +136,4 @@ class Solution:
         return dfs(set(stones), 0, 0, stones[-1])
 ```
 
-发现虽然分析思路是深度优先搜素，但是其实差不多。O(∩_∩)O
+发现虽然分析思路是深度优先搜素，但是其实一样的。O(∩_∩)O
