--- a/blog/2018/04301511.md
+++ b/blog/2018/04301511.md
@@ -23,17 +23,18 @@ GitHub Page虽然支持Markdown，但是不能正确显示公式，可以借用M
 3. 在`<head>`标签内加入代码：
 
     ``` javascript
-    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
-        <script type="text/x-mathjax-config">
-        MathJax.Hub.Config({
-            tex2jax: {
-            skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
-            inlineMath: [['$','$']]
-            }
-        });
-        </script>
+    <script type="text/x-mathjax-config">
+    MathJax.Hub.Config({
+        tex2jax: {
+        skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
+        inlineMath: [['$','$']]
+        }
+    });
+    </script>
     ```
 
 4. 等待GitHub部署好网页，就可以在md文件里输入公式查看了。
+
+比如输入`$ e = m c^2 $`显示为： $ e = m c^2 $
 
 [来源](https://stackoverflow.com/questions/26275645/how-to-supported-latex-in-github-pages)
