--- a/blog/2018/04301511.md
+++ b/blog/2018/04301511.md
@@ -35,6 +35,6 @@ GitHub Page虽然支持Markdown，但是不能正确显示公式，可以借用M
 
 4. 等待GitHub部署好网页，就可以在md文件里输入公式查看了。
 
-比如输入`$ e = m c^2 $`显示为： $ e = m c^2 $
+比如输入`$$ e = m c^2 $$`显示为： $$ e = m c^2 $$
 
 [来源](https://stackoverflow.com/questions/26275645/how-to-supported-latex-in-github-pages)
