--- a/blog/2018/04301511.md
+++ b/blog/2018/04301511.md
@@ -10,6 +10,18 @@
 
 ---
 
+<head>
+    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript">   </script>
+    <script type="text/x-mathjax-config">
+        MathJax.Hub.Config({
+            tex2jax: {
+            skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
+            inlineMath: [['$','$']]
+            }
+        });
+    </script>
+</head>
+
 GitHub Page虽然支持Markdown，但是不能正确显示公式，可以借用MathJax帮助渲染。
 
 方法：
