--- a/blog/2018/04301511.md
+++ b/blog/2018/04301511.md
@@ -26,27 +26,19 @@ GitHub Page虽然支持Markdown，但是不能正确显示公式，可以借用M
 
 方法：
 
-如果已经是自己定义的主题跳到3
+在md文件里面`<head>`标签内加入代码：
 
-1. 去Jekyll主题仓库找到`default.html`，网址为：`https://github.com/pages-themes/THEME_NAME/blob/master/_layouts/default.html`替换THEME_NAME为主题名字，例如我的是Cayman主题。
+``` javascript
+<script type="text/x-mathjax-config">
+MathJax.Hub.Config({
+    tex2jax: {
+    skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
+    inlineMath: [['$','$']]
+    }
+});
+</script>
+```
 
-2. 然后在自己仓库新建文件`_layouts/default.html`，把上面的代码拷贝进去。
-
-3. 在`<head>`标签内加入代码：
-
-    ``` javascript
-    <script type="text/x-mathjax-config">
-    MathJax.Hub.Config({
-        tex2jax: {
-        skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
-        inlineMath: [['$','$']]
-        }
-    });
-    </script>
-    ```
-
-4. 等待GitHub部署好网页，就可以在md文件里输入公式查看了。
-
-比如输入{% raw %} $ e = m c^2 $ {% endraw %}显示为： $ e = m c^2 $
+比如输入``` $ e = m c^2 $ ```显示为： $ e = m c^2 $
 
 [来源](https://stackoverflow.com/questions/26275645/how-to-supported-latex-in-github-pages)
