--- a/blog/2018/04301511.md
+++ b/blog/2018/04301511.md
@@ -11,7 +11,7 @@
 ---
 
 <head>
-    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript">   </script>
+    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"/>
     <script type="text/x-mathjax-config">
         MathJax.Hub.Config({
             tex2jax: {
@@ -39,6 +39,6 @@ MathJax.Hub.Config({
 </script>
 ```
 
-比如输入``` \$ e = m c^2 \$ ```（去掉`\`）显示为： $ e = m c^2 $
+比如输入```\$ e = m c^2 \$```（去掉`\`）显示为： $ e = m c^2 $
 
 [来源](https://stackoverflow.com/questions/26275645/how-to-supported-latex-in-github-pages)
