--- a/blog/2018/04301511.md
+++ b/blog/2018/04301511.md
@@ -11,7 +11,7 @@
 ---
 
 <head>
-    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"/>
+    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript">   </script>
     <script type="text/x-mathjax-config">
         MathJax.Hub.Config({
             tex2jax: {
