--- a/blog/2018/05312020.md
+++ b/blog/2018/05312020.md
@@ -24,7 +24,7 @@
 第一行：这里需要使用biber来编译，style就是标准名字，seconds是编译的时候提示要加的，
 gbnamefmt是设定作者名字不要全部大写，gbpub是不出现参考文献出版信息不全的东西。
 
-第二行：指定bib文件，该文件要放在主Tex文件同一个目录。
+第二行：指定bib文件相对路径，当然路径是主tex文件所在目录。
 
 ``` tex
 \addcontentsline{toc}{section}{参考文献}
