fix index error

--- a/blog/rl-notes/201807201055.md
+++ b/blog/rl-notes/201807201055.md
@@ -8,7 +8,7 @@
 
 ---
 
-> **本系列博客主页及相关见**[**此处**](https://github.com/Cugtyt/blog/rl-notes/index)  
+> **本系列博客主页及相关见**[**此处**](https://cugtyt.github.io/blog/rl-notes/index)  
 >
 > 来自Arthur Juliani *Simple Reinforcement Learning with Tensorflow series* [Part 1.5: Contextual Bandits](https://medium.com/emergent-future/simple-reinforcement-learning-with-tensorflow-part-1-5-contextual-bandits-bff01d1aad9c)
 
