--- a/blog/ml-in-action/201711081901.md
+++ b/blog/ml-in-action/201711081901.md
@@ -8,7 +8,7 @@
 
 ---
 
-> **本系列博客主页及相关见**[**此处**](https://github.com/Cugtyt/blog/ml-in-action/index)  
+> **本系列博客主页及相关见**[**此处**](https://cugtyt.github.io/blog/ml-in-action/index)  
 > **此处粘贴的代码来源为**<https://github.com/Jack-Cherish/Machine-Learning>
 
 ---
