--- a/blog/rl-notes/201807201324.md
+++ b/blog/rl-notes/201807201324.md
@@ -8,7 +8,7 @@
 
 ---
 
-> **本系列博客主页及相关见**[**此处**](https://github.com/Cugtyt/blog/rl-notes/index)  
+> **本系列博客主页及相关见**[**此处**](https://cugtyt.github.io/blog/rl-notes/index)  
 >
 > 来自Arthur Juliani *Simple Reinforcement Learning with Tensorflow series* [Deep Q-Networks and Beyond](https://medium.com/@awjuliani/simple-reinforcement-learning-with-tensorflow-part-4-deep-q-networks-and-beyond-8438a3e2b8df)
 
