update rl-notes, add papers

--- a/blog/rl-notes/201807201622.md
+++ b/blog/rl-notes/201807201622.md
@@ -1,4 +1,4 @@
-# Diving deeper into Reinforcement Learning with Q-Learning
+# An introduction to Deep Q-Learning: let’s play Doom
 
 ---
 > ## Contact me
