--- a/blog/papers/2018/0721.md
+++ b/blog/papers/2018/0721.md
@@ -62,7 +62,7 @@ $$G_{k,l,n} = \sum_{i,j,k} K_{i,j,m,n} \cdot F_{k+i-1,l+j-1,m}$$
 
 标准卷积运算代价为：
 
-$$D_K \cdot D_K \cdot M \cdot N \cdot D_F \cdot \D_F$$
+$$D_K \cdot D_K \cdot M \cdot N \cdot D_F \cdot D_F$$
 
 运算代价与输入通道数、输出通道数、核大小核特征图大小为乘性关系。MobileNet模型解决了这些项和他们间的相互作用。首先使用深度可分解卷积打破输出通道数和核大小的相互关系。
 
