--- a/blog/rl-notes/201807201508.md
+++ b/blog/rl-notes/201807201508.md
@@ -42,7 +42,7 @@ The goal of the agent is to **maximize the expected cumulative reward**.
 
 ### The central idea of the Reward Hypothesis
 
-$$G_t = R_{t+1} + R_{t+2} + \dot$$
+$$G_t = R_{t+1} + R_{t+2} + \dots$$
 
 等价于：
 
