--- a/blog/algo/201807231703.md
+++ b/blog/algo/201807231703.md
@@ -1,4 +1,4 @@
-# Reaching Points题目
+# Reaching Points问题
 
 ---
 > ## Contact me
@@ -68,7 +68,7 @@ Xn-1 = tx, Yn-1 = ty - tx
 
 Xn-m = tx, Yn-m = ty - m * tx
 
-这里可以做一个转换，就是Yn-m = ty % tx，因为n-m这个时候tx是最大的。
+这里可以做一个转换，就是Yn-m = ty % tx，n-m这个时候tx是最大的。
 
 这样我们就把这个问题转化到了从(sx,sy)到(tx, ty % tx)，同理，我们可以继续做下去，把问题转化为从(x,y)到(tx % (ty % tx), ty % tx)。因为 小数 % 大数 = 小数，因此可以把问题(tx, ty % tx)写为(tx % ty, ty % tx)。
 
