update blog const

--- a/blog/2018/07241254.md
+++ b/blog/2018/07241254.md
@@ -108,4 +108,4 @@ int main()
 }
 ```
 
-getInfo的返回值不能是int*，main中info的类型也不能是int*，info[5]也不能修改，因此这一系列保证了权限的问题。
+getInfo的返回值不能是int\*，main中info的类型也不能是int\*，info[5]也不能修改，因此这一系列保证了权限的问题。
