update blog are gan create equal

--- a/blog/papers/2018/0725.md
+++ b/blog/papers/2018/0725.md
@@ -56,7 +56,7 @@ GAN中模型学习简单分布$p_z$的一个确定转换，目的是与数据分
 
 最经典的衡量生成模型的方法是模型似然，但是这经常是做不到的。对数似然可以近似为低维向量的分布近似，在复杂高维数据情况下，这个任务十分困难。提出的一些方法均不是很理想（略）。
 
-**Inception Score (IS)**提供了一个定量衡量的方法。该方法受以下启发：（1）样本条件标签分布包含有意义的部分，应该有较低的熵，（2）样本的多样性应该相等或更高，边缘$\int_z p(y|x=G(z))dz$应该有高的熵。最后结合在一起：
+**Inception Score (IS)**提供了一个定量衡量的方法。该方法受以下启发：（1）样本条件标签分布包含有意义的部分，应该有较低的熵，（2）样本的多样性应该相等或更高，边缘![are-gan-equal6](R/are-gan-equal6.png)应该有高的熵。最后结合在一起：
 
 ![are-gan-equal1](R/are-gan-equal1.png)
 
