--- a/blog/2018/04301511.md
+++ b/blog/2018/04301511.md
@@ -26,18 +26,20 @@ GitHub Page虽然支持Markdown，但是不能正确显示公式，可以借用M
 
 方法：
 
-在md文件里面`<head>`标签内加入代码：
+在md文件开始处加入代码：
 
-``` javascript
-<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
-<script type="text/x-mathjax-config">
-MathJax.Hub.Config({
-    tex2jax: {
-    skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
-    inlineMath: [['$','$']]
-    }
-});
-</script>
+``` html
+<head>
+    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+    <script type="text/x-mathjax-config">
+        MathJax.Hub.Config({
+            tex2jax: {
+            skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
+            inlineMath: [['$','$']]
+            }
+        });
+    </script>
+</head>
 ```
 
 比如输入```\$ e = m c^2 \$```（去掉`\`）显示为： $ e = m c^2 $
