add Santander Value Prediction Challenge - 2

--- a/blog/kaggle-records/Santander-Value-Prediction-Challenge/20180726.md
+++ b/blog/kaggle-records/Santander-Value-Prediction-Challenge/20180726.md
@@ -138,4 +138,4 @@ rmsle4
        0.10497934, 0.11209608, 0.10805128, 0.11798833, 0.11809618])
 ```
 
-发现好了不少，说明用target还是很有效的，后面我们再继续尝试其他方法。
+发现好了不少，说明用target还是很有效的，提交结构后发现分数是1.7，后面我们再继续尝试其他方法。
