--- a/blog/papers/2018/0728.md
+++ b/blog/papers/2018/0728.md
@@ -1,14 +1,12 @@
 # You Only Look Once: Unified, Real-Time Object Detection
 
----
-> ## Contact me
-> Blog -> <https://cugtyt.github.io/blog/index>  
-> Email -> <cugtyt@qq.com>, <cugtyt@gmail.com>  
-> GitHub -> [Cugtyt@GitHub](https://github.com/Cugtyt)
+## Contact me
 
----
+* Blog -> <https://cugtyt.github.io/blog/index>
+* Email -> <cugtyt@qq.com>, <cugtyt@gmail.com>
+* GitHub -> [Cugtyt@GitHub](https://github.com/Cugtyt)
 
-> **本系列博客主页及相关见**[**此处**](https://cugtyt.github.io/blog/papers/index)  
+> **本系列博客主页及相关见**[**此处**](https://cugtyt.github.io/blog/papers/index)
 
 ---
 
