update blog reverse-bits

--- a/blog/algo/2018080215.md
+++ b/blog/algo/2018080215.md
@@ -75,7 +75,7 @@ uint32_t reverseBits(uint32_t n) {
 }
 ```
 
-当然这里为了看的方便，没有计算0x01每次移位的值，可以计算出来，但是这里是最好的解法了吗？不过把ege写成循环可不见得快，所以那不是我们考虑的。看下[网上的解法](https://leetcode.com/problems/reverse-bits/discuss/54741/O(1)-bit-operation-C++-solution-(8ms))：
+当然这里为了看的方便，没有计算0x01每次移位的值，可以计算出来，但是这里是最好的解法了吗？不过写成循环可不见得快，所以那不是我们考虑的。看下[网上的解法](https://leetcode.com/problems/reverse-bits/discuss/54741/O(1)-bit-operation-C++-solution-(8ms))：
 
 ``` c
 uint32_t reverseBits(uint32_t n) {
