update blog cpp to rust

--- a/blog/2018/080310.md
+++ b/blog/2018/080310.md
@@ -8,7 +8,7 @@
 
 ---
 
-如果你有C++的经验就知道，在C/C++里面变量之间默认都是复制的，比如[从C语言的函数传参谈指针](https://cugtyt.github.io/blog/2018/02191214)说的就是C中的变量复制，C++中如果你没有让构造函数做移动或其他特殊操作，那么变量也是复制的，比如：
+如果你有C++的经验就知道，在C/C++里面变量之间默认都是复制的，[从C语言的函数传参谈指针](https://cugtyt.github.io/blog/2018/02191214)说的就是C中的变量复制，C++中如果你没有让构造函数做移动或其他特殊操作，那么变量也是复制的，比如：
 
 ``` c++
 Class C { /* sth. normal*/ };
@@ -17,7 +17,7 @@ C c1;
 C c2 = c1;
 ```
 
-c2是把c1复制了一份，如果是复制比较廉价还好，如果对象比较大的话，复制就比较昂贵，那么我们一般的做法是用指针，指针的复制很廉价，当然考虑到实际环境，你可能要考虑使用现代C++的智能指针，这就有好几种选择了，[从C++的RAII理解智能指针的思路（一）](https://cugtyt.github.io/blog/2018/02132021)和[从C++的RAII理解智能指针的思路（二）](https://cugtyt.github.io/blog/2018/02191208)从RAII的角度解释了智能指针的基本解释。当然如果要和老代码打交道，还需要考虑普通指针和智能指针的共存。而且使用指针必须注意指针臭名昭著的问题，例如野指针，内存释放，内存泄漏一系列头疼的问题。
+c2是把c1复制了一份，如果是复制比较廉价还好，如果对象比较大的话，复制就比较昂贵，那么我们一般的做法是用指针，指针的复制很廉价，当然考虑到实际环境，你可能要考虑使用现代C++的智能指针，这就有好几种选择了，[从C++的RAII理解智能指针的思路（一）](https://cugtyt.github.io/blog/2018/02132021)和[从C++的RAII理解智能指针的思路（二）](https://cugtyt.github.io/blog/2018/02191208)从RAII的角度做了智能指针的基本解释。当然如果要和老代码打交道，还需要考虑普通指针和智能指针的共存。而且使用指针必须注意指针臭名昭著的问题，例如野指针，内存释放，内存泄漏一系列头疼的问题。
 
 对了，还有移动构造可以考虑，移动可以省去拷贝。
 
@@ -39,7 +39,7 @@ C *c2 = c1;  // 对分配在堆上的类型，采用移动
 // 离开作用域自动释放资源
 ```
 
-有点像使用了C++的unique_ptr，不过简化了写法。这样有什么好处呢？不会出现两个指针访问同一个资源的情况，离开左移域自动释放资源，我们就不用操心资源释放的问题了，没有野指针，不会出现指针悬挂，就像unique_ptr做的一样。似乎只是个语法糖，我们再加一点就和基本的Rust所有权差不多了，那就是**每个资源只有一个拥有所有权的引用**。
+有点像使用了C++的unique_ptr，不过简化了写法。这样有什么好处呢？不会出现两个指针访问同一个资源的情况，离开作用域自动释放资源，我们就不用操心资源释放的问题了，没有野指针，不会出现指针悬挂，就像unique_ptr做的一样。似乎只是个语法糖，我们再加一点就和基本的Rust所有权差不多了，那就是**每个资源只有一个拥有所有权的引用**。
 
 那我们正式进入Rust（这里我们暂时不考虑Rust的智能指针）：
 
