update blog mobilenet

--- a/blog/papers/2018/0721.md
+++ b/blog/papers/2018/0721.md
@@ -90,7 +90,7 @@ $$D_K \cdot D_K \cdot M \cdot D_F \cdot D_F + M \cdot N \cdot D_F \cdot D_F$$
 
 把这两步放在一起我们得到节省的运算为：
 
-$$\frac{D_K \cdot D_K \cdot M \cdot D_F \cdot D_F + M \cdot N \cdot D_F \cdot D_F}{D_K \cdot D_K \cdot M \cdot D_F \cdot D_F} = frac{1}{N} + frac{1}{D_K^2}$$
+$$\frac{D_K \cdot D_K \cdot M \cdot D_F \cdot D_F + M \cdot N \cdot D_F \cdot D_F}{D_K \cdot D_K \cdot M \cdot D_F \cdot D_F} = \frac{1}{N} + \frac{1}{D_K^2}$$
 
 MobileNet使用3\*3深度可分卷积，可以比标准卷积省8-9倍，准确率只有一点影响。
 
